--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
   <nav class="zone blue sticky">
       <ul class="main-nav">
-          <li><a href="">About</a></li>
-          <li><a href="">Products</a></li>
+          <li><a href="">Početna</a></li>
+          <li><a href="">O nama</a></li>
           <li><a href="">Our Team</a></li>
           <li class="push"><a href="">Contact</a></li>
   </ul>
@@ -41,7 +41,7 @@
         </div>
     </div>
   </div>
-  <footer class="zone"><p>2019 Assaf Elovic All right reserved. For more articles visit www.assafelovic.com</p></footer>
+  <footer class="zone"><p>Anglon 2021</p></footer>
 </div>
 </body>
 </html>
