--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Basic LP Layout</title>
+  <title>Anglon - najpovoljniji prijevodi u gradu</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
@@ -9,8 +9,6 @@
       <ul class="main-nav">
           <li><a href="">Početna</a></li>
           <li><a href="">O nama</a></li>
-          <li><a href="">Our Team</a></li>
-          <li class="push"><a href="">Contact</a></li>
   </ul>
   </nav>
   <div class="container">
