--- a/index.html
+++ b/index.html
@@ -4,38 +4,38 @@
   <title>Anglon - najpovoljniji prijevod u gradu</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
+  
 <body>
   <nav class="zone blue sticky">
       <ul class="main-nav">
           <li><a href="">Početna</a></li>
           <li><a href="">O nama</a></li>
-  </ul>
+      </ul> 
   </nav>
+  
   <div class="container">
       <img class="cover" src="img/cover.jpg">
-      <div class="coverText"><h1>Making the world a better place</h1></div>
+      <div class="coverText"><h1>A N G L O N</h1></div>
   </div>
   <div class="zone blue grid-wrapper">
       <div class="card zone">
           <img src="./img/startup1.jpg">
           <div class="text">
-              <h1>Team play</h1>
-              <p>We believe in working together</p>
-              <button>Learn more</button>
+              <h1>1.Korak</h1>
+              <p>Pošaljite dokument na našu email adresu</p>
           </div>
       </div>
     <div class="card zone"><img src="./img/startup2.jpg">
         <div class="text">
-            <h1>Team play</h1>
-            <p>We believe in working together</p>
-            <button>Learn more</button>
+            <h1>2.Korak</h1>
+            <p>Pričekajte ponudu</p>
         </div>
     </div>
-    <div class="card zone"><img src="./img/startup3.jpg">
+    <div class="card zone">
+      <img src="./img/startup3.jpg">
         <div class="text">
-            <h1>Team play</h1>
-            <p>We believe in working together</p>
-            <button>Learn more</button>
+            <h1>3.Korak</h1>
+            <p>Potvrdite narudžbu</p>
         </div>
     </div>
   </div>
