--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Navbar end-->
   
   <div class="container">
-      <img class="cover" src="img/cover.jpg">
+      <img class="cover" src="img/cover1.jpg">
       <div class="coverText"><h1>A N G L O N</h1></div>
   </div>
   <div class="zone blue grid-wrapper">
