--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   
 <body>
   
-  <!-- Navbar -->
- <nav class="navbar navbar-light bg-faded">
-  <a class="navbar-brand" href="#">Anglon</a>
+ <!-- Image and text -->
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="#">
+    <img src="./img/logo.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
+    Anglon
+  </a>
 </nav>
   
   <div class="container">
