--- a/index.html
+++ b/index.html
@@ -2,46 +2,21 @@
 <html>
 <head>
   <title>Anglon - najpovoljniji prijevod u gradu</title>
+  <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="./style.css">
-</head>
+</head> 
   
 <body>
-  
- <!-- Image and text -->
-<nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="#">
-    <img src="./img/logo.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
-    Anglon
-  </a>
-</nav>
-  
   <div class="container">
+    <div class="cover"> 
       <img class="cover" src="img/cover1.jpg">
       <div class="coverText"><h1>A N G L O N</h1></div>
-  </div>
-  <div class="zone blue grid-wrapper">
-      <div class="card zone">
-          <img src="./img/startup1.jpg">
-          <div class="text">
-              <h1>1.Korak</h1>
-              <p>Pošaljite dokument na našu email adresu</p>
-          </div>
-      </div>
-    <div class="card zone"><img src="./img/startup2.jpg">
-        <div class="text">
-            <h1>2.Korak</h1>
-            <p>Pričekajte ponudu</p>
-        </div>
     </div>
-    <div class="card zone">
-      <img src="./img/startup3.jpg">
-        <div class="text">
-            <h1>3.Korak</h1>
-            <p>Potvrdite narudžbu</p>
-        </div>
-    </div>
-  </div>
-  <footer class="zone"><p>Anglon 2021</p></footer>
+
+    <div class="main-content">...</div>
+
+
+    <footer class="footer"><p>Anglon 2021</p></footer>
 </div>
 </body>
 </html>
