--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
     <div class="cover"> 
       <img class="cover" src="img/cover1.jpg">
-      <div class="coverText"><h1>A N G L O N</h1></div>
+      <div class="coverText">A N G L O N</div>
    
          
     <footer class="footer"><p>Anglon 2021</p></footer>
